Fix continue focus ring clipped

--- a/src/assets/scss/components/_oktaSigninWidget.scss
+++ b/src/assets/scss/components/_oktaSigninWidget.scss
@@ -27,6 +27,7 @@ sign-up-modal {
 #okta-sign-in.auth-container {
   $okta-grey: #f5f5f5;
   width: 100%;
+  overflow: visible;
 
   // ============== Container ============== //
 
